--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "twbs/bootstrap": "^4.3",
-      "ext-json": "*",
-      "ext-http": "*"
+        "ext-json": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
