--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,20 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "google/cloud": "^0.128.0",
+        "google/cloud-error-reporting": "^0.16.1",
+        "google/cloud-logging": "^1.19",
+        "google/cloud-storage": "^1.18",
         "jeroennoten/laravel-adminlte": "^1.26",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "twbs/bootstrap": "^4.3",
-      "ext-json": "*",
-      "ext-http": "*"
+        "superbalist/flysystem-google-storage": "^7.2",
+        "twbs/bootstrap": "^4.3"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
@@ -47,13 +50,31 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+        "post-deploy-cmd": [
+	   "Illuminate\\Foundation\\ComposerScripts::postInstall",
+           "@php artisan key:generate --ansi",
+           "chmod -R 755 bootstrap\/cache",
+           "chmod -R 755 storage"
         ],
         "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ]
+           "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+           "@php artisan package:discover --ansi",
+           "chmod -R 755 bootstrap\/cache",
+           "chmod -R 755 storage",
+           "php artisan optimize",
+	   "php artisan config:cache"
+        ],
+       "post-install-cmd": [
+           "Illuminate\\Foundation\\ComposerScripts::postInstall",
+           "chmod -R 755 bootstrap\/cache",
+	   "chmod -R 755 storage",
+	   "php artisan optimize",
+	   "php artisan config:cache"
+       ],
+       "post-update-cmd": [
+           "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+           "@php artisan optimize"
+       ]
     },
     "config": {
         "preferred-install": "dist",
