--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,7 @@ runtime: php
 env: flex
 runtime_config:
   document_root: public
-  enable_stackdriver_integration: true  
+  enable_stackdriver_integration: true
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
@@ -30,7 +30,7 @@ env_variables:
   #CACHE_DRIVER: database
   SESSION_DRIVER: cookie
   DB_CONNECTION: pgsql
-  DB_HOST: 172.26.16.4 
+  DB_HOST: 172.26.16.4
   DB_PORT: 5432
   DB_DATABASE: coches
   DB_USERNAME: postgres
@@ -38,6 +38,6 @@ env_variables:
   DB_USER: postgres
   DB_PASS: Test123
   DB_NAME: coches
-  #DB_SOCKET: "/cloudsql/concrete-crow-253819:europe-west1:pr00tp"
-#beta_settings:
-    #cloud_sql_instances: "concrete-crow-253819:europe-west1:pr00tp"
+  DB_SOCKET: "/cloudsql/concrete-crow-253819:europe-west1:pr00tp"
+beta_settings:
+    cloud_sql_instances: "concrete-crow-253819:europe-west1:pr00tp"
