--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "barryvdh/laravel-dompdf": "^0.8.6",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.26",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "twbs/bootstrap": "^4.3",
-        "ext-json": "*"
+        "twbs/bootstrap": "^4.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
