--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jeroennoten/laravel-adminlte": "^1.26",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "spatie/schema-org": "^2.13",
         "twbs/bootstrap": "^4.3"
     },
     "require-dev": {
