se elimina keyword (no lo utiliza google)

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,15 +3,11 @@
         Options -MultiViews
     </IfModule>
     RewriteEngine On
+
+    RewriteCond %{HTTP_HOST} ^www\.mcvehiculos\.com$
+    RewriteRule ^/?$ "http\:\/\/mcvehiculos\.com\/" [R=301,L]
+
     DirectoryIndex index.php # This line does the trick
-
-    RewriteEngine On
-    RewriteCond %{HTTP_HOST} ^www.mcvehiculos.com[NC,OR]
-    RewriteRule ^(.*)$ https://mcvehiculos.com/$1 [L,R=301]
-
-    RewriteEngine on
-    RewriteCond %{HTTP_HOST} ^https://mcvehiculos.com[NC,OR]
-    RewriteRule ^(.*)$ https://mcvehiculos.com/$1 [L,R=301,NC]
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
@@ -25,4 +21,6 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+    ServerSignature Off
 </IfModule>
