--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         "jeroennoten/laravel-adminlte": "^1.26",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "phpoffice/phpword": "^0.17.0",
         "spatie/schema-org": "^2.13",
-        "twbs/bootstrap": "^4.3"
+        "twbs/bootstrap": "^4.3",
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
+        "nesbot/carbon": "2.0.0-beta.2 as 1.25.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
