--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.4.0",
         "jspdf": "^1.5.3",
+        "sweet-modal-vue-evolution": "^2.0.7",
         "vue-axios": "^2.1.5",
         "vue-html-to-paper": "^1.1.1",
         "vue-template-compiler": "^2.6.11"
